tests/ui/consts/const-eval/shift_overflow.stderr
error[E0080]: attempt to shift left by `4294967296_u64`, which would overflow
  --> $DIR/shift_overflow.rs:3:9
   |
LL |     X = 1 << ((u32::MAX as u64) + 1),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `Foo::X::{constant#0}` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
